crates/hir/tests/ui/hir_origin_export_key_raw_strings.stderr
error[E0308]: mismatched types
 --> tests/ui/hir_origin_export_key_raw_strings.rs:5:33
  |
5 |         let _ = expr.export_key("body:test");
  |                      ---------- ^^^^^^^^^^^ expected `&HirOriginBodyOwnerKey`, found `&str`
  |                      |
  |                      arguments to this method are incorrect
  |
  = note: expected reference `&HirOriginBodyOwnerKey`
             found reference `&'static str`
note: method defined here
 --> src/origin.rs
  |
  |     pub fn export_key(self, stable_body_key: &HirOriginBodyOwnerKey) -> OriginExportKey {
  |            ^^^^^^^^^^

error[E0308]: mismatched types
 --> tests/ui/hir_origin_export_key_raw_strings.rs:6:33
  |
6 |         let _ = stmt.export_key("body:test");
  |                      ---------- ^^^^^^^^^^^ expected `&HirOriginBodyOwnerKey`, found `&str`
  |                      |
  |                      arguments to this method are incorrect
  |
  = note: expected reference `&HirOriginBodyOwnerKey`
             found reference `&'static str`
note: method defined here
 --> src/origin.rs
  |
  |     pub fn export_key(self, stable_body_key: &HirOriginBodyOwnerKey) -> OriginExportKey {
  |            ^^^^^^^^^^
