crates/hir/tests/ui/hir_origin_export_key_raw_strings.rs
use fe_hir::origin::{HirExprOrigin, HirStmtOrigin};

fn main() {
    fn mismatch(expr: HirExprOrigin<'_>, stmt: HirStmtOrigin<'_>) {
        let _ = expr.export_key("body:test");
        let _ = stmt.export_key("body:test");
    }
}
